<resources>
    <string name="app_name">RandoChoice</string>
    <string name="choose_for_me">Choose for me!</string>
    <string name="welcome_text">RandoChoice</string>
    <string name="inputText">Add a choice</string>
    <string name="addText">Add</string>
    <string name="clear">Clear</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="noFiles">There are no saved lists!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="emptyList">The list is empty!</string>
    <string name="enterFileName">Enter list name</string>
</resources>