<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:locale="en"
    android:id="@+id/mainBackground"
    android:background="@drawable/gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/clearButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:text="@string/clear"
        android:textSize="16sp"
        android:background="@drawable/rounded_corner_button_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toEndOf="@+id/choiceButton"
        app:layout_constraintTop_toBottomOf="@+id/choiceList"
        app:layout_constraintVertical_bias="0.955" />

    <Button
        android:id="@+id/choiceButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="176dp"
        android:layout_height="61dp"
        android:layout_marginBottom="16dp"
        android:text="@string/choose_for_me"
        android:textSize="17sp"
        android:background="@drawable/rounded_corner_button_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choiceList"
        app:layout_constraintVertical_bias="0.912" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/welcome_text"
        android:textColor="@color/colorGreen"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/choiceInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/choiceInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inputText"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/colorBlue"
        android:textColorHint="@color/colorBlueDark"
        android:backgroundTint="@color/colorBlueDark"
        app:layout_constraintBottom_toTopOf="@+id/choiceList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.805" />

    <ListView
        android:id="@+id/choiceList"
        android:layout_width="351dp"
        android:layout_height="379dp"
        android:background="@drawable/green_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ListView>

    <Button
        android:id="@+id/addButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addText"
        android:textSize="17sp"
        android:background="@drawable/rounded_corner_button_green"
        app:layout_constraintBottom_toTopOf="@+id/choiceList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/choiceInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:text=""
        android:textColor="@color/colorBlue"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/choiceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choiceList"
        app:layout_constraintVertical_bias="0.55" />

    <ImageButton
        android:id="@+id/loadButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/load"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_action_folder_open"
        android:background="@drawable/rounded_corner_button_blue"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/save"
        android:padding="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_action_save"
        android:background="@drawable/rounded_corner_button_blue"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintStart_toEndOf="@+id/loadButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/save"
        android:padding="1dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_action_trash"
        android:background="@drawable/rounded_corner_button_blue"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saveButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

</androidx.constraintlayout.widget.ConstraintLayout>